--- a/css/style.css
+++ b/css/style.css
@@ -55,9 +55,6 @@
  #lugares-viajar img{
      width: 300px; 
  }
- #lugares{
-    margin-top: 70px;
- }
 #lugares-viajar img{
     transition: transform 0.3s ease;
     border-radius: 10px;
@@ -75,4 +72,25 @@
 .justificar-texto{
     text-align: justify;
     line-height: 20px;
+}
+.espacamento{
+    margin-top: 8vh;
+}
+#container{
+    width: 80vw;
+    margin: 0 auto;
+}
+.lugar-detalhado{
+    display: flex;
+}
+.img-detalhado{
+    width: 50%;
+}
+.texto-detalhado{
+    width: 50%;
+}
+.img-detalhado img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
 }
