--- a/css/style.css
+++ b/css/style.css
@@ -86,6 +86,7 @@
 }
 .img-detalhado{
     width: 50%;
+    max-height: 60vh;
 }
 .texto-detalhado{
     width: 50%;
@@ -100,4 +101,5 @@
 }
 .arredondar{
      border-radius: 20px;
+     overflow: hidden;
 }
